--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,6 @@ filename = lib/Method/Protected.rakumod
 [UploadToZef]
 
 [Badges]
-provider = github-actions/ubuntu.yml
+provider = github-actions/linux.yml
 provider = github-actions/macos.yml
 provider = github-actions/windows.yml
