Move doc and add coverage tests

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name = Method::Protected
 
 [ReadmeFromPod]
-filename = lib/Method/Protected.rakumod
+filename = doc/Method-Protected.rakudoc
 
 [UploadToZef]
 
